refactor: unit tests and take / return method in InventoryEntityService